# crab-shortener

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  urls.db
src/: db.rs  errors.rs  main.rs
view/: index.html
