[package]
name = "crab-shortener"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web Framework
shuttle-runtime = "0.17.0"
shuttle-axum = "0.17.0"
shuttle-shared-db = { version = "0.17.0", features = ["postgres"] }
tokio = "1.28.1"

# Utilities
rand = "0.8.5"
derive_more = "0.99.17"
validator = { version = "0.16", features = ["derive"] }

# Serializer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.6.3", features = [ "runtime-actix-native-tls" , "postgres" ] }
axum = { version = "0.6.18", features = [ "json", "macros" ] }

[build-dependencies]
fs_extra = "1.2.0"
